# automi_v1

./: .gitignore  CMakeLists.txt  README.md  husky.urdf.xacro  package.xml
VIO/: CMakeLists.txt  README.md  vio.cpp  vio.hpp  vio_node.cpp  visual_inertial_odometry.cpp  visual_odometry.cpp  visual_odometry.hpp
VISION/: readme  visual_odometry.cpp
cfg/depth/: params.yaml
depth/: README.md  depth_stereo.cpp  depth_stereo.hpp  depth_stereo_node.cpp
include/automi_v1/: huro.hpp
include/depth/: depth_stereo.hpp
include/helper/: GradDesend.hpp  objective_func.hpp  optmiser.hpp
include/kalman/: kalman.hpp
include/mapping/: container.hpp  map.hpp  map_manager.hpp
include/planner/: ODG_PF.hpp  planner.hpp
include/vio/: vio.hpp  visual_odometry.hpp
kalman_filter/: CMakeLists.txt  README.md  kalman.cpp  kalman.hpp  kalman_example.cpp
launch/: depth.launch
mapping/: README.md  container.cpp  container.hpp  map.cpp  map.hpp
msg/: dimension.msg  map.msg  object.msg
src/depth/: depth_stereo.cpp  depth_stereo_node.cpp
src/helper/: GradDesend.cpp  controller_node.cpp  objective_func.cpp  optmiser.cpp  optmiser_node.cpp
src/kalman/: kalman.cpp  kalman_example.cpp
src/mapping/: container.cpp  map.cpp  map_manager.cpp
src/planner/: GaussianPF.cpp  planner.cpp  sprint_planner.cpp  sprint_planner_node.cpp
src/vio/: KalmanWraper.cpp  test.cpp  vio.cpp  vio_node.cpp  visual_odometry.cpp
